more style tweaks, and fix z-index conflict for back button

--- a/src/generic_ui/styles/buttons.sass
+++ b/src/generic_ui/styles/buttons.sass
@@ -30,6 +30,8 @@
   border: none
   height: 24px
   width: 30px
+  position: absolute
+  z-index: 500
 
 .btn-back:hover, .btn-back:focus
   opacity: 0.5
