--- a/src/generic_ui/styles/contact.sass
+++ b/src/generic_ui/styles/contact.sass
@@ -2,9 +2,10 @@
 // consent management.
 
 #contact-header
-  position: fixed
+  position: absolute
   z-index: 300
   width: 100%
+  height: 28px
   top: 0
   padding-bottom: 2px
   box-shadow: 0 1px 3px #888
